--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </div>
     </main>
 
-    <div class="fixed bottom-0 left-0 right-0 bg-white p-4 shadow-2xl max-w-md mx-auto rounded-t-2xl border-t">
+    <div class="fixed bottom-0 left-0 right-0 bg-white p-4 shadow-2xl max-w-md mx-auto rounded-t-2xl">
         <div class="flex justify-between items-center mb-4">
-            <span class="font-bold text-lg">المجموع: <span id="total-price" class="text-orange-600 text-2xl">0</span> ريال</span>
+            <span class="font-bold">المجموع: <span id="total-price" class="text-orange-600 text-xl">0</span> ريال</span>
         </div>
         <button id="send-btn" onclick="sendOrder()" class="w-full bg-green-600 text-white py-4 rounded-xl font-bold text-lg shadow-lg active:scale-95 transition">
-            إتمام الطلب عبر الواتساب
+            إتمام الطلب والدفع عند الاستلام
         </button>
     </div>
 
@@ -47,56 +47,53 @@
         let cart = [];
         let total = 0;
 
-        // إضافة منتج للسلة
         function addToCart(name, price) {
             cart.push({name, price});
             total += price;
             document.getElementById('total-price').innerText = total;
         }
 
-        // إرسال الطلب
-        function sendOrder() {
-            if (cart.length === 0) {
-                return alert("السلة فارغة! فضلاً اختر بعض الأصناف أولاً.");
-            }
+        async function sendOrder() {
+            if (cart.length === 0) return alert("السلة فارغة!");
 
             let customerName = prompt("فضلاً ادخل اسمك:");
             let customerPhone = prompt("فضلاً ادخل رقم جوالك:");
             
-            if(!customerName || !customerPhone) {
-                return alert("الاسم ورقم الجوال مطلوبان لتأكيد الطلب.");
-            }
+            if(!customerName || !customerPhone) return alert("الاسم والجوال مطلوبين لتأكيد الطلب");
 
             const btn = document.getElementById('send-btn');
             btn.disabled = true;
-            btn.innerText = "جاري تحويلك للواتساب...";
+            btn.innerText = "جاري الإرسال...";
 
-            // 1. تجميع المنتجات في نص واحد
-            let orderSummary = cart.map(item => `- ${item.name} (${item.price} ريال)`).join('%0A');
+            let orderSummary = cart.map(item => `${item.name} (${item.price} ريال)`).join(', ');
 
-            // 2. تحديد رقم الواتساب بالصيغة الدولية (بدون صفر في البداية)
-            let phoneNumber = "966502743396"; 
+            try {
+                // استخدام الرابط الجديد الخاص بكِ xreaedjv
+                const response = await fetch("https://formspree.io/f/xreaedjv", {
+                    method: "POST",
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        "اسم العميل": customerName,
+                        "الجوال": customerPhone,
+                        "الطلب": orderSummary,
+                        "المجموع": total + " ريال",
+                        "طريقة الدفع": "عند الاستلام"
+                    })
+                });
 
-            // 3. تجهيز نص الرسالة
-            let message = `*طلب جديد من مطعم مراسيم العرب*%0A%0A` +
-                          `*اسم العميل:* ${customerName}%0A` +
-                          `*الجوال:* ${customerPhone}%0A%0A` +
-                          `*الطلبات:*%0A${orderSummary}%0A%0A` +
-                          `*المجموع الكلي:* ${total} ريال%0A%0A` +
-                          `*طريقة الدفع:* عند الاستلام`;
-
-            // 4. فتح رابط الواتساب
-            window.open(`https://wa.me/${phoneNumber}?text=${message}`, '_blank');
-
-            // إعادة تعيين السلة بعد الإرسال
-            setTimeout(() => {
-                alert("✅ تم تحويلك للواتساب لتأكيد الطلب.");
-                cart = [];
-                total = 0;
-                document.getElementById('total-price').innerText = "0";
+                if (response.ok) {
+                    alert("✅ تم إرسال طلبك بنجاح يا " + customerName + ". بنكلمك الحين!");
+                    cart = []; total = 0;
+                    document.getElementById('total-price').innerText = "0";
+                } else {
+                    alert("عذراً، فشل الإرسال. تأكدي من تفعيل الإيميل.");
+                }
+            } catch (err) {
+                alert("خطأ في الاتصال بالإنترنت");
+            } finally {
                 btn.disabled = false;
-                btn.innerText = "إتمام الطلب عبر الواتساب";
-            }, 1000);
+                btn.innerText = "إتمام الطلب والدفع عند الاستلام";
+            }
         }
     </script>
 </body>
