--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             try {
                 // استخدام الرابط الجديد الخاص بكِ xreaedjv
-                const response = await fetch("https://formspree.io/f/xreaedjv", {
+                const response = await fetch("https://formspree.io/f/xreaevqo", {
                     method: "POST",
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
