--- a/index.html
+++ b/index.html
@@ -18,28 +18,37 @@
     <main class="p-4 max-w-md mx-auto">
         <div class="grid gap-4">
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
-                <div><h3 class="font-bold">نفر لحم مندي</h3><p class="text-orange-600">75 ريال</p></div>
+                <div class="flex items-center gap-3">
+                    <img src="https://via.placeholder.com/60" alt="لحم" class="w-16 h-16 rounded-lg object-cover">
+                    <div><h3 class="font-bold">نفر لحم مندي</h3><p class="text-orange-600">75 ريال</p></div>
+                </div>
                 <button onclick="addToCart('نفر لحم مندي', 75)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold active:scale-95 transition">إضافة +</button>
             </div>
 
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
-                <div><h3 class="font-bold">حبة دجاج مع الأرز</h3><p class="text-orange-600">40 ريال</p></div>
+                <div class="flex items-center gap-3">
+                    <img src="https://via.placeholder.com/60" alt="دجاج" class="w-16 h-16 rounded-lg object-cover">
+                    <div><h3 class="font-bold">حبة دجاج مع الأرز</h3><p class="text-orange-600">40 ريال</p></div>
+                </div>
                 <button onclick="addToCart('حبة دجاج مع الأرز', 40)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold active:scale-95 transition">إضافة +</button>
             </div>
 
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
-                <div><h3 class="font-bold">مظبي دجاج</h3><p class="text-orange-600">38 ريال</p></div>
+                <div class="flex items-center gap-3">
+                    <img src="https://via.placeholder.com/60" alt="مظبي" class="w-16 h-16 rounded-lg object-cover">
+                    <div><h3 class="font-bold">مظبي دجاج</h3><p class="text-orange-600">38 ريال</p></div>
+                </div>
                 <button onclick="addToCart('مظبي دجاج', 38)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold active:scale-95 transition">إضافة +</button>
             </div>
         </div>
     </main>
 
-    <div class="fixed bottom-0 left-0 right-0 bg-white p-4 shadow-2xl max-w-md mx-auto rounded-t-2xl">
+    <div class="fixed bottom-0 left-0 right-0 bg-white p-4 shadow-2xl max-w-md mx-auto rounded-t-2xl border-t">
         <div class="flex justify-between items-center mb-4">
-            <span class="font-bold">المجموع: <span id="total-price" class="text-orange-600 text-xl">0</span> ريال</span>
+            <span class="font-bold text-lg">المجموع: <span id="total-price" class="text-orange-600 text-2xl">0</span> ريال</span>
         </div>
         <button id="send-btn" onclick="sendOrder()" class="w-full bg-green-600 text-white py-4 rounded-xl font-bold text-lg shadow-lg active:scale-95 transition">
-            إتمام الطلب والدفع عند الاستلام
+            إرسال الطلب عبر الموقع
         </button>
     </div>
 
@@ -54,21 +63,37 @@
         }
 
         async function sendOrder() {
-            if (cart.length === 0) return alert("السلة فارغة!");
+            if (cart.length === 0) return alert("السلة فارغة! اختر بعض الأطباق أولاً.");
 
-            let customerName = prompt("فضلاً ادخل اسمك:");
-            let customerPhone = prompt("فضلاً ادخل رقم جوالك:");
+            let customerName = prompt("فضلاً ادخل اسمك الكريم:");
+            let customerPhone = prompt("فضلاً ادخل رقم جوالك (مثال: 05XXXXXXXX):");
             
-            if(!customerName || !customerPhone) return alert("الاسم والجوال مطلوبين لتأكيد الطلب");
+            // التحقق من رقم الجوال (يجب أن يبدأ بـ 05 ويتكون من 10 أرقام)
+            const phoneRegex = /^(05)\d{8}$/;
+            if(!customerName || !customerPhone) return alert("الاسم والجوال مطلوبين لتوصيل الطلب");
+            if(!phoneRegex.test(customerPhone)) return alert("عذراً، يجب إدخال رقم جوال سعودي صحيح يبدأ بـ 05");
 
             const btn = document.getElementById('send-btn');
             btn.disabled = true;
-            btn.innerText = "جاري الإرسال...";
+            btn.innerText = "جاري تحديد موقعك وإرسال الطلب...";
 
-            let orderSummary = cart.map(item => `${item.name} (${item.price} ريال)`).join(', ');
+            // محاولة الحصول على الموقع الجغرافي
+            let locationLink = "لم يشارك الموقع";
+            if (confirm("هل تسمح لنا بالوصول لموقعك الحالي لتسهيل التوصيل؟")) {
+                try {
+                    const position = await new Promise((resolve, reject) => {
+                        navigator.geolocation.getCurrentPosition(resolve, reject, {enableHighAccuracy: true});
+                    });
+                    locationLink = `https://www.google.com/maps?q=${position.coords.latitude},${position.coords.longitude}`;
+                } catch (err) {
+                    console.log("Location access denied");
+                }
+            }
+
+            let orderSummary = cart.map(item => `${item.name}`).join(', ');
 
             try {
-                // استخدام الرابط الجديد الخاص بكِ xreaedjv
+                // الرابط الجديد الخاص بكِ xreaevqo
                 const response = await fetch("https://formspree.io/f/xreaevqo", {
                     method: "POST",
                     headers: { 'Content-Type': 'application/json' },
@@ -77,22 +102,23 @@
                         "الجوال": customerPhone,
                         "الطلب": orderSummary,
                         "المجموع": total + " ريال",
-                        "طريقة الدفع": "عند الاستلام"
+                        "موقع العميل (Google Maps)": locationLink,
+                        "وقت الطلب": new Date().toLocaleString('ar-SA')
                     })
                 });
 
                 if (response.ok) {
-                    alert("✅ تم إرسال طلبك بنجاح يا " + customerName + ". بنكلمك الحين!");
+                    alert("✅ تم استلام طلبك يا " + customerName + "\nسنصلك في أسرع وقت عبر الموقع الذي حددته!");
                     cart = []; total = 0;
                     document.getElementById('total-price').innerText = "0";
                 } else {
-                    alert("عذراً، فشل الإرسال. تأكدي من تفعيل الإيميل.");
+                    alert("عذراً، فشل الإرسال. تأكد من تفعيل الحساب.");
                 }
             } catch (err) {
                 alert("خطأ في الاتصال بالإنترنت");
             } finally {
                 btn.disabled = false;
-                btn.innerText = "إتمام الطلب والدفع عند الاستلام";
+                btn.innerText = "إرسال الطلب والدفع عند الاستلام";
             }
         }
     </script>
