--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مطعم مراسيم العرب - البدائع</title>
+    <title>مطعم مراسيم العرب 3- البدائع</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <style> 
@@ -138,3 +138,4 @@
     </script>
 </body>
 </html>
+
