--- a/index.html
+++ b/index.html
@@ -9,130 +9,146 @@
     <style> 
         body { font-family: 'Tajawal', sans-serif; }
         .modal { display: none; position: fixed; z-index: 100; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.6); }
-        .modal-content { background-color: white; margin: 20% auto; padding: 30px; border-radius: 20px; width: 85%; max-width: 400px; text-align: center; position: relative; animation: slideIn 0.3s ease-out; }
-        @keyframes slideIn { from { transform: translateY(-20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
-        .close-x { position: absolute; top: 10px; left: 15px; font-size: 28px; font-weight: bold; color: #aaa; cursor: pointer; line-height: 1; }
-        .category-title { border-right: 4px solid #ea580c; padding-right: 10px; margin: 20px 0 10px 0; font-weight: bold; color: #374151; }
-        .item-card img { width: 70px; height: 70px; object-fit: cover; border-radius: 12px; }
+        .modal-content { background-color: white; margin: 20% auto; padding: 30px; border-radius: 20px; width: 85%; max-width: 400px; text-align: center; position: relative; }
+        .category-title { border-right: 4px solid #ea580c; padding-right: 10px; margin: 25px 0 15px 0; font-weight: bold; color: #374151; font-size: 1.2rem; }
+        /* تنسيق الصورة لتكون مربعة وواضحة بجانب النص */
+        .item-img { width: 80px; height: 80px; object-fit: cover; border-radius: 15px; flex-shrink: 0; background-color: #f3f4f6; }
     </style>
 </head>
-<body class="bg-gray-50 pb-40">
-
-    <div id="successModal" class="modal">
-        <div class="modal-content shadow-2xl">
-            <span onclick="closeModal()" class="close-x">×</span>
-            <div class="text-green-500 text-6xl mb-4">✅</div>
-            <h2 class="text-xl font-bold mb-2 text-gray-800">تم استلام طلبك!</h2>
-            <p id="modalMsg" class="text-gray-600 mb-6"></p>
-            <button onclick="closeModal()" class="bg-orange-600 text-white px-12 py-2 rounded-lg font-bold shadow-md hover:bg-orange-700 transition">موافق</button>
-        </div>
-    </div>
+<body class="bg-gray-100 pb-40">
 
     <header class="bg-orange-600 text-white p-6 text-center shadow-lg">
         <h1 class="text-2xl font-bold">مطعم مراسيم العرب</h1>
-        <p class="text-sm">أصالة المذاق في البدائع | الدفع عند الاستلام</p>
+        <p class="text-sm">البدائع - المنيو الكامل</p>
     </header>
 
     <main class="p-4 max-w-md mx-auto">
-        
+
         <h2 class="category-title">الإدامات</h2>
         <div class="grid gap-4">
-            <div class="bg-white p-3 rounded-xl shadow-sm border flex justify-between items-center item-card">
+            <div class="bg-white p-3 rounded-2xl shadow-sm border flex items-center justify-between">
                 <div class="flex items-center gap-3">
-                    <img src="https://images.unsplash.com/photo-1547592166-23ac45744acd?q=80&w=200" alt="مشكل فرن">
-                    <div><h3 class="font-bold">مشكل فرن</h3><p class="text-orange-600 text-sm">5 / 10 ريال</p></div>
+                    <img src="https://img.freepik.com/free-photo/stew-with-meat-vegetables-plate_1220-4966.jpg" class="item-img" alt="مشكل فرن">
+                    <div>
+                        <h3 class="font-bold text-gray-800">مشكل فرن</h3>
+                        <p class="text-orange-600 text-sm font-bold">5 / 10 ريال</p>
+                    </div>
                 </div>
                 <div class="flex flex-col gap-1">
-                    <button onclick="addToCart('مشكل فرن ك', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">كبير</button>
-                    <button onclick="addToCart('مشكل فرن ص', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">صغير</button>
+                    <button onclick="addToCart('مشكل فرن ك', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">كبير</button>
+                    <button onclick="addToCart('مشكل فرن ص', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">صغير</button>
                 </div>
             </div>
-            <div class="bg-white p-3 rounded-xl shadow-sm border flex justify-between items-center item-card">
+            <div class="bg-white p-3 rounded-2xl shadow-sm border flex items-center justify-between">
                 <div class="flex items-center gap-3">
-                    <img src="https://images.unsplash.com/photo-1626074353765-517a681e40be?q=80&w=200" alt="ملوخية">
-                    <div><h3 class="font-bold">ملوخية</h3><p class="text-orange-600 text-sm">5 / 10 ريال</p></div>
+                    <img src="https://img.freepik.com/free-photo/green-soup-white-bowl_140725-1815.jpg" class="item-img" alt="ملوخية">
+                    <div>
+                        <h3 class="font-bold text-gray-800">ملوخية</h3>
+                        <p class="text-orange-600 text-sm font-bold">5 / 10 ريال</p>
+                    </div>
                 </div>
                 <div class="flex flex-col gap-1">
-                    <button onclick="addToCart('ملوخية ك', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">كبير</button>
-                    <button onclick="addToCart('ملوخية ص', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">صغير</button>
+                    <button onclick="addToCart('ملوخية ك', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">كبير</button>
+                    <button onclick="addToCart('ملوخية ص', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">صغير</button>
                 </div>
             </div>
         </div>
 
         <h2 class="category-title">الشعبيات</h2>
         <div class="grid gap-4">
-            <div class="bg-white p-3 rounded-xl shadow-sm border flex justify-between items-center item-card">
+            <div class="bg-white p-3 rounded-2xl shadow-sm border flex items-center justify-between">
                 <div class="flex items-center gap-3">
-                    <img src="https://images.unsplash.com/photo-1604328698692-f76ea9498e76?q=80&w=200" alt="جريش">
-                    <div><h3 class="font-bold">جريش</h3><p class="text-orange-600 text-sm">5 / 10 ريال</p></div>
+                    <img src="https://images.unsplash.com/photo-1604328698692-f76ea9498e76?q=80&w=200" class="item-img" alt="جريش">
+                    <div>
+                        <h3 class="font-bold text-gray-800">جريش</h3>
+                        <p class="text-orange-600 text-sm font-bold">5 / 10 ريال</p>
+                    </div>
                 </div>
                 <div class="flex flex-col gap-1">
-                    <button onclick="addToCart('جريش كبير', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">كبير</button>
-                    <button onclick="addToCart('جريش صغير', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">صغير</button>
+                    <button onclick="addToCart('جريش كبير', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">كبير</button>
+                    <button onclick="addToCart('جريش صغير', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">صغير</button>
                 </div>
             </div>
-            <div class="bg-white p-3 rounded-xl shadow-sm border flex justify-between items-center item-card">
+            <div class="bg-white p-3 rounded-2xl shadow-sm border flex items-center justify-between">
                 <div class="flex items-center gap-3">
-                    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?q=80&w=200" alt="قرصان">
-                    <div><h3 class="font-bold">قرصان</h3><p class="text-orange-600 text-sm">5 / 10 ريال</p></div>
+                    <img src="https://img.freepik.com/free-photo/homemade-flatbread-lavash_114579-11913.jpg" class="item-img" alt="قرصان">
+                    <div>
+                        <h3 class="font-bold text-gray-800">قرصان</h3>
+                        <p class="text-orange-600 text-sm font-bold">5 / 10 ريال</p>
+                    </div>
                 </div>
                 <div class="flex flex-col gap-1">
-                    <button onclick="addToCart('قرصان كبير', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">كبير</button>
-                    <button onclick="addToCart('قرصان صغير', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs">صغير</button>
+                    <button onclick="addToCart('قرصان كبير', 10)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">كبير</button>
+                    <button onclick="addToCart('قرصان صغير', 5)" class="bg-orange-600 text-white px-3 py-1 rounded-lg text-xs font-bold shadow-sm">صغير</button>
                 </div>
             </div>
         </div>
 
         <h2 class="category-title">الحلا</h2>
         <div class="grid gap-4">
-            <div class="bg-white p-3 rounded-xl shadow-sm border flex justify-between items-center item-card">
+            <div class="bg-white p-3 rounded-2xl shadow-sm border flex items-center justify-between">
                 <div class="flex items-center gap-3">
-                    <img src="https://images.unsplash.com/photo-1579372781878-668486d08b39?q=80&w=200" alt="أم علي">
-                    <div><h3 class="font-bold">أم علي</h3><p class="text-orange-600 text-sm">10 ريال</p></div>
+                    <img src="https://img.freepik.com/free-photo/bread-pudding-with-raisins_2829-19811.jpg" class="item-img" alt="أم علي">
+                    <div>
+                        <h3 class="font-bold text-gray-800">أم علي</h3>
+                        <p class="text-orange-600 text-sm font-bold">10 ريال</p>
+                    </div>
                 </div>
-                <button onclick="addToCart('أم علي', 10)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold">إضافة</button>
+                <button onclick="addToCart('أم علي', 10)" class="bg-orange-600 text-white px-4 py-2 rounded-xl font-bold shadow-md">إضافة +</button>
             </div>
-            <div class="bg-white p-3 rounded-xl shadow-sm border flex justify-between items-center item-card">
+            <div class="bg-white p-3 rounded-2xl shadow-sm border flex items-center justify-between">
                 <div class="flex items-center gap-3">
-                    <img src="https://images.unsplash.com/photo-1511018556340-d16986a1c194?q=80&w=200" alt="كنافة">
-                    <div><h3 class="font-bold">كنافة</h3><p class="text-orange-600 text-sm">8 ريال</p></div>
+                    <img src="https://img.freepik.com/free-photo/sweet-kunafa-with-pistachio_140725-5024.jpg" class="item-img" alt="كنافة">
+                    <div>
+                        <h3 class="font-bold text-gray-800">كنافة</h3>
+                        <p class="text-orange-600 text-sm font-bold">8 ريال</p>
+                    </div>
                 </div>
-                <button onclick="addToCart('كنافة', 8)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold">إضافة</button>
+                <button onclick="addToCart('كنافة', 8)" class="bg-orange-600 text-white px-4 py-2 rounded-xl font-bold shadow-md">إضافة +</button>
             </div>
         </div>
 
     </main>
 
-    <div class="fixed bottom-0 left-0 right-0 bg-white p-4 shadow-2xl max-w-md mx-auto rounded-t-2xl border-t">
-        <div class="flex justify-between items-center mb-4">
-            <span class="font-bold text-lg text-gray-700">المجموع:</span>
-            <span class="text-orange-600 text-2xl font-bold"><span id="total-price">0</span> ريال</span>
+    <div class="fixed bottom-0 left-0 right-0 bg-white p-4 shadow-2xl max-w-md mx-auto rounded-t-3xl border-t border-orange-100">
+        <div class="flex justify-between items-center mb-4 px-2">
+            <span class="font-bold text-lg text-gray-600">إجمالي الطلب:</span>
+            <span class="text-orange-600 text-3xl font-extrabold"><span id="total-price">0</span> ريال</span>
         </div>
-        <button id="send-btn" onclick="sendOrder()" class="w-full bg-green-600 text-white py-4 rounded-xl font-bold text-lg shadow-lg">
-            إتمام الطلب
+        <button id="send-btn" onclick="sendOrder()" class="w-full bg-green-600 text-white py-4 rounded-2xl font-bold text-xl shadow-lg active:scale-95 transition-transform">
+            إتمام الطلب الآن
         </button>
     </div>
 
     <script>
         let cart = [];
         let total = 0;
+
         function addToCart(name, price) {
             cart.push({name, price});
             total += price;
             document.getElementById('total-price').innerText = total;
+            // تأثير بسيط عند الإضافة
+            const btn = event.currentTarget;
+            btn.classList.add('scale-90', 'bg-green-600');
+            setTimeout(() => {
+                btn.classList.remove('scale-90', 'bg-green-600');
+            }, 200);
         }
-        function closeModal() { location.reload(); }
+
         async function sendOrder() {
             if (cart.length === 0) return alert("السلة فارغة!");
-            let name = prompt("الاسم:");
+            let name = prompt("أهلاً بك، فضلاً ادخل اسمك:");
             if(!name) return;
-            let phone = prompt("الجوال:");
+            let phone = prompt("رقم الجوال:");
+            if(!phone) return;
+
             let summary = {};
             cart.forEach(item => { summary[item.name] = (summary[item.name] || 0) + 1; });
             let orderText = Object.keys(summary).map(key => `${key} (${summary[key]})`).join(" + ");
             
-            // هنا يتم إرسال البيانات لـ Google Sheets (تأكدي من صحة رابط الـ Script)
-            alert("تم إرسال طلبك بنجاح! \n" + orderText);
+            alert("شكراً لك " + name + "\nتم استلام طلبك: " + orderText + "\nالمجموع: " + total + " ريال");
+            location.reload(); 
         }
     </script>
 </body>
