--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
         @keyframes slideIn { from { transform: translateY(-20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
         .close-x { position: absolute; top: 10px; left: 15px; font-size: 28px; font-weight: bold; color: #aaa; cursor: pointer; line-height: 1; }
         .category-title { border-right: 4px solid #ea580c; padding-right: 10px; margin: 20px 0 10px 0; font-weight: bold; color: #374151; }
+        
+        /* توحيد حجم الأزرار */
+        .btn-fixed {
+            width: 100px; /* عرض ثابت */
+            height: 45px; /* ارتفاع ثابت */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.85rem;
+            line-height: 1.2;
+        }
+        .btn-fixed span {
+            font-size: 0.75rem;
+            font-weight: normal;
+        }
     </style>
 </head>
 <body class="bg-gray-50 pb-40">
@@ -41,14 +57,14 @@
                     <div class="w-16 h-16 bg-gray-200 rounded-lg flex items-center justify-center text-xs text-gray-400">صورة</div>
                     <div><h3 class="font-bold">تيس كامل مندي</h3><p class="text-orange-600">1380 ريال</p></div>
                 </div>
-                <button onclick="addToCart('تيس كامل مندي', 1380)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('تيس كامل مندي', 1380)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>1380 ريال</span></button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
                     <div class="w-16 h-16 bg-gray-200 rounded-lg flex items-center justify-center text-xs text-gray-400">صورة</div>
                     <div><h3 class="font-bold">نص تيس مندي</h3><p class="text-orange-600">690 ريال</p></div>
                 </div>
-                <button onclick="addToCart('نص تيس مندي', 690)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('نص تيس مندي', 690)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>690 ريال</span></button>
             </div>
         </div>
 
@@ -60,8 +76,8 @@
                     <div><h3 class="font-bold">دجاج مندي</h3><p class="text-orange-600">21/42 ريال</p></div>
                 </div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('حبة دجاج مندي', 42)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">كاملة</button>
-                    <button onclick="addToCart('نص دجاج مندي', 21)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">نص</button>
+                    <button onclick="addToCart('حبة دجاج مندي', 42)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">كاملة <span>42 ريال</span></button>
+                    <button onclick="addToCart('نص دجاج مندي', 21)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">نص <span>21 ريال</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
@@ -70,8 +86,8 @@
                     <div><h3 class="font-bold">دجاج مضغوط</h3><p class="text-orange-600">21/42 ريال</p></div>
                 </div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('حبة دجاج مضغوط', 42)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">كاملة</button>
-                    <button onclick="addToCart('نص دجاج مضغوط', 21)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">نص</button>
+                    <button onclick="addToCart('حبة دجاج مضغوط', 42)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">كاملة <span>42 ريال</span></button>
+                    <button onclick="addToCart('نص دجاج مضغوط', 21)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">نص <span>21 ريال</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
@@ -80,8 +96,8 @@
                     <div><h3 class="font-bold">دجاج مقلوبة</h3><p class="text-orange-600">23/45 ريال</p></div>
                 </div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('حبة دجاج مقلوبة', 45)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">كاملة</button>
-                    <button onclick="addToCart('نص دجاج مقلوبة', 23)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">نص</button>
+                    <button onclick="addToCart('حبة دجاج مقلوبة', 45)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">كاملة <span>45 ريال</span></button>
+                    <button onclick="addToCart('نص دجاج مقلوبة', 23)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">نص <span>23 ريال</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
@@ -90,8 +106,8 @@
                     <div><h3 class="font-bold">دجاج شواية</h3><p class="text-orange-600">21/42 ريال</p></div>
                 </div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('حبة دجاج شواية', 42)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">كاملة</button>
-                    <button onclick="addToCart('نص دجاج شواية', 21)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm font-bold">نص</button>
+                    <button onclick="addToCart('حبة دجاج شواية', 42)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">كاملة <span>42 ريال</span></button>
+                    <button onclick="addToCart('نص دجاج شواية', 21)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold">نص <span>21 ريال</span></button>
                 </div>
             </div>
         </div>
@@ -103,14 +119,14 @@
                     <div class="w-16 h-16 bg-gray-200 rounded-lg flex items-center justify-center text-xs text-gray-400">صورة</div>
                     <div><h3 class="font-bold">نفر لحم مندي</h3><p class="text-orange-600">85 ريال</p></div>
                 </div>
-                <button onclick="addToCart('نفر لحم مندي', 85)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('نفر لحم مندي', 85)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>85 ريال</span></button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div class="flex items-center gap-3">
                     <div class="w-16 h-16 bg-gray-200 rounded-lg flex items-center justify-center text-xs text-gray-400">صورة</div>
                     <div><h3 class="font-bold">نفر لحم حاشي</h3><p class="text-orange-600">50 ريال</p></div>
                 </div>
-                <button onclick="addToCart('نفر لحم حاشي', 50)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('نفر لحم حاشي', 50)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>50 ريال</span></button>
             </div>
         </div>
 
@@ -119,29 +135,29 @@
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">مشكل فرن</h3><p class="text-orange-600">5 / 10 ريال</p></div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('مشكل فرن كبير', 10)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">كبير</button>
-                    <button onclick="addToCart('مشكل فرن صغير', 5)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">صغير</button>
+                    <button onclick="addToCart('مشكل فرن كبير', 10)" class="btn-fixed bg-orange-600 text-white rounded-lg">كبير <span>10 ريال</span></button>
+                    <button onclick="addToCart('مشكل فرن صغير', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg">صغير <span>5 ريال</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">مشكل خضار</h3><p class="text-orange-600">5 / 10 ريال</p></div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('مشكل خضار كبير', 10)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">كبير</button>
-                    <button onclick="addToCart('مشكل خضار صغير', 5)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">صغير</button>
+                    <button onclick="addToCart('مشكل خضار كبير', 10)" class="btn-fixed bg-orange-600 text-white rounded-lg">كبير <span>10 ريال</span></button>
+                    <button onclick="addToCart('مشكل خضار صغير', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg">صغير <span>5 ريال</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">بامية</h3><p class="text-orange-600">5 / 10 ريال</p></div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('بامية كبير', 10)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">كبير</button>
-                    <button onclick="addToCart('بامية صغير', 5)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">صغير</button>
+                    <button onclick="addToCart('بامية كبير', 10)" class="btn-fixed bg-orange-600 text-white rounded-lg">كبير <span>10 ريال</span></button>
+                    <button onclick="addToCart('بامية صغير', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg">صغير <span>5 ريال</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">ملوخية</h3><p class="text-orange-600">5 / 10 ريال</p></div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('ملوخية كبير', 10)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">كبير</button>
-                    <button onclick="addToCart('ملوخية صغير', 5)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">صغير</button>
+                    <button onclick="addToCart('ملوخية كبير', 10)" class="btn-fixed bg-orange-600 text-white rounded-lg">كبير <span>10 ريال</span></button>
+                    <button onclick="addToCart('ملوخية صغير', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg">صغير <span>5 ريال</span></button>
                 </div>
             </div>
         </div>
@@ -150,23 +166,23 @@
         <div class="grid gap-4">
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">تبولة</h3><p class="text-orange-600">5 ريال</p></div>
-                <button onclick="addToCart('تبولة', 5)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('تبولة', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>5 ريال</span></button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">سلطة خيار بالزبادي</h3><p class="text-orange-600">5 ريال</p></div>
-                <button onclick="addToCart('سلطة خيار بالزبادي', 5)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('سلطة خيار بالزبادي', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>5 ريال</span></button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">سلطة ذرة</h3><p class="text-orange-600">5 ريال</p></div>
-                <button onclick="addToCart('سلطة ذرة', 5)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('سلطة ذرة', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>5 ريال</span></button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">سلطة زيتون</h3><p class="text-orange-600">5 ريال</p></div>
-                <button onclick="addToCart('سلطة زيتون', 5)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('سلطة زيتون', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>5 ريال</span></button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">حمص</h3><p class="text-orange-600">5 ريال</p></div>
-                <button onclick="addToCart('حمص', 5)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('حمص', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>5 ريال</span></button>
             </div>
         </div>
 
@@ -175,15 +191,15 @@
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">جريش</h3><p class="text-orange-600">5 / 10 ريال</p></div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('جريش كبير', 10)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">كبير</button>
-                    <button onclick="addToCart('جريش صغير', 5)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">صغير</button>
+                    <button onclick="addToCart('جريش كبير', 10)" class="btn-fixed bg-orange-600 text-white rounded-lg">كبير <span>10 ريال</span></button>
+                    <button onclick="addToCart('جريش صغير', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg">صغير <span>5 ريال</span></button>
                 </div>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">قرصان</h3><p class="text-orange-600">5 / 10 ريال</p></div>
                 <div class="flex gap-1">
-                    <button onclick="addToCart('قرصان كبير', 10)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">كبير</button>
-                    <button onclick="addToCart('قرصان صغير', 5)" class="bg-orange-600 text-white px-3 py-2 rounded-lg text-sm">صغير</button>
+                    <button onclick="addToCart('قرصان كبير', 10)" class="btn-fixed bg-orange-600 text-white rounded-lg">كبير <span>10 ريال</span></button>
+                    <button onclick="addToCart('قرصان صغير', 5)" class="btn-fixed bg-orange-600 text-white rounded-lg">صغير <span>5 ريال</span></button>
                 </div>
             </div>
         </div>
@@ -192,11 +208,11 @@
         <div class="grid gap-4">
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">أم علي</h3><p class="text-orange-600">10 ريال</p></div>
-                <button onclick="addToCart('أم علي', 10)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('أم علي', 10)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>10 ريال</span></button>
             </div>
             <div class="bg-white p-4 rounded-xl shadow-sm border flex justify-between items-center">
                 <div><h3 class="font-bold">كنافة</h3><p class="text-orange-600">8 ريال</p></div>
-                <button onclick="addToCart('كنافة', 8)" class="bg-orange-600 text-white px-4 py-2 rounded-lg font-bold transition">إضافة +</button>
+                <button onclick="addToCart('كنافة', 8)" class="btn-fixed bg-orange-600 text-white rounded-lg font-bold transition">إضافة <span>8 ريال</span></button>
             </div>
         </div>
 
